k8s/base/rorla/simulator.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulator
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: simulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
spec:
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator
          image: iteam1337/pm-digital-twin-simulation-engine
          resources:
            requests:
              cpu: "1.5"
              memory: "512Mi"
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: cache
              mountPath: /app/.cache

      volumes:
        - name: cache
          hostPath:
            path: /storage/predictivemovement/rorla
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulator-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "simulator"
spec:
  tls:
    - hosts:
        - rorla-stage.predictivemovement.se
      secretName: rorla-stage-tls
  rules:
    - host: rorla-stage.predictivemovement.se
      http:
        paths:
          - path: /socket.io/.*
            pathType: Prefix
            backend:
              service:
                name: simulator
                port:
                  number: 4000
